--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,13 +1,15 @@
 name: Build APK (debug)
+
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
+      ANDROID_SDK_ROOT: /tmp/android-sdk
     steps:
       - uses: actions/checkout@v4
 
@@ -20,29 +22,27 @@ jobs:
       - name: Install required packages
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip wget
+          sudo apt-get install -y wget unzip
 
-      - name: Install Android command line tools and SDK
+      - name: Download Android SDK Command-line tools
         run: |
-          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O /tmp/cmdline.zip
-          unzip /tmp/cmdline.zip -d $ANDROID_SDK_ROOT/cmdline-tools
-          mkdir -p $ANDROID_SDK_ROOT/licenses
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+          mkdir -p $ANDROID_SDK_ROOT
+          cd $ANDROID_SDK_ROOT
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip -d cmdline-tools
+          rm cmdline-tools.zip
+          mv cmdline-tools/cmdline-tools cmdline-tools/latest
 
-      - name: Download Gradle
+      - name: Install SDK packages
         run: |
-          wget https://services.gradle.org/distributions/gradle-7.5.1-bin.zip -O gradle.zip
-          unzip gradle.zip -d $HOME/gradle
-          echo "$HOME/gradle/gradle-7.5.1/bin" >> $GITHUB_PATH
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-34" "build-tools;34.0.0"
 
-      - name: Build debug APK
-        run: |
-          export ANDROID_SDK_ROOT=${{ runner.temp }}/android-sdk
-          ./gradlew assembleDebug || gradle assembleDebug
+      - name: Build APK
+        run: ./gradlew assembleDebug
 
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk
+          name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
